# sialo

./: Cargo.toml  LICENSE  README.md  example_app.json  flowers.html
src/: cli.rs  error.rs  main.rs  util.rs
src/cli/: delete.rs  download.rs  objects.rs  prune_slabs.rs  register.rs  share.rs  upload.rs
